Entity can can add and remove it's comoonents

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,7 +2,9 @@ cmake_minimum_required(VERSION 3.13 FATAL_ERROR)
 set(PROJECT_NAME PikumaGameEngineLion)
 project(${PROJECT_NAME})
 add_compile_options(/utf-8)
-##
+set(CMAKE_CXX_STANDARD 17)
+
+
 add_executable(${PROJECT_NAME} src/Main.cpp
         src/Logger/Logger.h
         src/Game/Game.h
@@ -11,7 +13,10 @@ add_executable(${PROJECT_NAME} src/Main.cpp
         src/Systems/MovementSystem.h
         src/ECS/ECS.cpp
         src/ECS/ECS.h
-        src/Components/TransformComponent.h)
+        src/Components/TransformComponent.h
+        src/ECS/Registry.cpp
+        src/ECS/Registry.h
+        src/Components/RigidBodyComponent.h)
 
 target_include_directories(${PROJECT_NAME} PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/libs)
 target_include_directories(${PROJECT_NAME} PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/SDL2/include)
