--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -21,7 +21,9 @@ add_executable(${PROJECT_NAME} src/Main.cpp
         src/Components/AllComponents.h
         src/Systems/RenderSystem.h
         src/AssetStore/AssetStore.cpp
-        src/AssetStore/AssetStore.h)
+        src/AssetStore/AssetStore.h
+        src/Components/AnimationComponent.h
+        src/Systems/AnimationSystem.h)
 
 target_include_directories(${PROJECT_NAME} PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/libs)
 target_include_directories(${PROJECT_NAME} PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/SDL2/include)
