--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -30,7 +30,9 @@ add_executable(${PROJECT_NAME} src/Main.cpp
         src/Events/CollisionEvent.h
         src/EventBus/EventBus.h
         src/EventBus/Event.h
-        src/Systems/DamageSystem.h)
+        src/Systems/DamageSystem.h
+        src/Systems/KeyboardMovementSystem.h
+        src/Events/KeyPressedEvent.h)
 
 target_include_directories(${PROJECT_NAME} PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/libs)
 target_include_directories(${PROJECT_NAME} PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/SDL2/include)
