--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -33,7 +33,9 @@ add_executable(${PROJECT_NAME} src/Main.cpp
         src/Systems/DamageSystem.h
         src/Systems/KeyboardMovementSystem.h
         src/Events/KeyPressedEvent.h
-        src/Components/KeyboardControlledComponent.h)
+        src/Components/KeyboardControlledComponent.h
+        src/Components/CameraFollowComponent.h
+        src/Systems/CameraMovementSystem.h)
 
 target_include_directories(${PROJECT_NAME} PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/libs)
 target_include_directories(${PROJECT_NAME} PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/SDL2/include)
