--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -42,7 +42,8 @@ add_executable(${PROJECT_NAME} src/Main.cpp
         src/Components/ProjectileComponent.h
         src/Components/LifeSpanComponent.h
         src/Components/LifeSpanComponent.h
-        src/Systems/LifeSpanSystem.h)
+        src/Systems/LifeSpanSystem.h
+        src/misc/QuadTree.h)
 
 target_include_directories(${PROJECT_NAME} PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/libs)
 target_include_directories(${PROJECT_NAME} PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/SDL2/include)
