--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -49,6 +49,7 @@ add_executable(${PROJECT_NAME} src/Main.cpp
         src/Components/LinkComponent.h
         src/Systems/LinkSystem.h
         src/Systems/HealtBarSystem.h
+        src/misc/ThreadPool.h
 )
 
 target_include_directories(${PROJECT_NAME} PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/libs)
